--- a/package.json
+++ b/package.json
@@ -3,25 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/jest": "^23.3.10",
     "@types/node": "^10.12.18",
     "@types/react": "^16.7.18",
     "@types/react-dom": "^16.0.11",
+    "@types/react-test-renderer": "^16.0.3",
     "@types/styled-components": "^4.1.4",
+    "babel": "^6.23.0",
+    "babel-core": "^6.26.3",
+    "enzyme-to-json": "^3.3.5",
     "immutability-helper": "^2.9.0",
     "react": "^16.7.0",
     "react-dnd": "^7.0.2",
     "react-dnd-html5-backend": "^7.0.2",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.2",
-    "styled-components": "^4.1.3",
-    "typescript": "^3.2.2"
+    "react-test-renderer": "^16.7.0",
+    "regenerator-runtime": "^0.13.1",
+    "styled-components": "^4.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "jest"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -31,5 +34,22 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "@babel/core": "^7.0.0-beta.56",
+    "@babel/helper-plugin-utils": "^7.0.0-beta.56",
+    "@babel/preset-env": "^7.0.0-beta.56",
+    "@babel/register": "^7.0.0-beta.56",
+    "@types/enzyme": "^3.1.15",
+    "@types/enzyme-adapter-react-16": "^1.0.3",
+    "@types/jest": "^23.3.13",
+    "babel-loader": "^8.0.0-beta.4",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.7.1",
+    "jest": "^23.6.0",
+    "jsdom": "13.1.0",
+    "jsdom-global": "3.0.2",
+    "ts-jest": "^23.10.5",
+    "typescript": "^3.2.4"
+  }
 }
