--- a/package.json
+++ b/package.json
@@ -16,15 +16,19 @@
     "react-dnd": "^7.0.2",
     "react-dnd-html5-backend": "^7.0.2",
     "react-dom": "^16.7.0",
+    "react-pdf": "^4.0.2",
+    "react-pdf-js": "^4.0.2",
     "react-scripts": "2.1.2",
     "react-test-renderer": "^16.7.0",
+    "react-typescript-pdf-reader": "0.0.6",
     "regenerator-runtime": "^0.13.1",
     "styled-components": "^4.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "jest"
+    "test": "jest",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -50,6 +54,6 @@
     "jsdom": "13.1.0",
     "jsdom-global": "3.0.2",
     "ts-jest": "^23.10.5",
-    "typescript": "^3.2.4"
+    "typescript": "^3.1.6"
   }
 }
